<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirm">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation" >

    </android.support.design.widget.BottomNavigationView>

    <TextView
        android:id="@+id/text_neueFahrt2"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/uebersicht"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_offer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="123dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_neueFahrt2" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="@android:color/background_light"
        android:text="Bestätigen"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style_grey"
        android:paddingBottom="1dp"
        android:paddingEnd="80dp"
        android:paddingLeft="80dp"
        android:paddingTop="1dp"
        android:text="@string/notification_fahrer"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_neueFahrt2" />

    <ImageView
        android:id="@+id/image_uhr"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/clock" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="37dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:text="@string/hinfahrt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_uhr"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <View
        android:id="@+id/grey_background"
        android:layout_width="369dp"
        android:layout_height="119dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/area_style_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="46dp"
        android:layout_height="67dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@+id/grey_background"
        app:layout_constraintTop_toTopOf="@+id/grey_background"
        app:srcCompat="@drawable/distance" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/von"
        app:layout_constraintStart_toStartOf="@+id/grey_background"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="75dp"
        android:text="@string/nach"
        app:layout_constraintStart_toStartOf="@+id/grey_background"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <ImageView
        android:id="@+id/image_haus"
        android:layout_width="25dp"
        android:layout_height="31dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/grey_background"
        app:srcCompat="@drawable/home_white" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="28dp"
        android:layout_height="21dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="75dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/grey_background"
        app:srcCompat="@drawable/work_white" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="37dp"
        android:text="@string/zuhause"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="97dp"
        android:text="@string/arbeit"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />


    // zweiter grauer Bereich


    <ImageView
        android:id="@+id/image_uhr2"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/clock" />


    <TextView
        android:id="@+id/text_rueckfahrt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="270dp"
        android:text="@string/rueckfahrt"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_uhr"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <View
        android:id="@+id/grey_background2"
        android:layout_width="369dp"
        android:layout_height="119dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="305dp"
        android:background="@drawable/area_style_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/image_distance2"
        android:layout_width="46dp"
        android:layout_height="67dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="202dp"
        app:layout_constraintStart_toStartOf="@+id/grey_background"
        app:layout_constraintTop_toTopOf="@+id/grey_background"
        app:srcCompat="@drawable/distance" />

    <TextView
        android:id="@+id/text_von2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="196dp"
        android:text="von"
        app:layout_constraintStart_toStartOf="@+id/grey_background"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/text_nach2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="255dp"
        android:text="nach"
        app:layout_constraintStart_toStartOf="@+id/grey_background"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <ImageView
        android:id="@+id/image_work2"
        android:layout_width="25dp"
        android:layout_height="31dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="190dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/grey_background"
        app:srcCompat="@drawable/work_white" />

    <ImageView
        android:id="@+id/image_haus2"
        android:layout_width="28dp"
        android:layout_height="21dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="255dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/grey_background"
        app:srcCompat="@drawable/home_white" />

    <TextView
        android:id="@+id/text_arbeit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="217dp"
        android:text="@string/arbeit"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/text_zuhause2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="277dp"
        android:text="@string/zuhause"
        android:textColor="@color/colorAccent"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/abfahrt"
        app:layout_constraintStart_toEndOf="@+id/image_haus"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/ankunft"
        app:layout_constraintStart_toEndOf="@+id/image_haus"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/sitze"
        app:layout_constraintStart_toEndOf="@+id/image_haus"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/abfahrt"
        app:layout_constraintStart_toEndOf="@+id/image_work2"
        app:layout_constraintTop_toTopOf="@+id/grey_background2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/ankunft"
        app:layout_constraintStart_toEndOf="@+id/image_work2"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/sitze"
        app:layout_constraintStart_toEndOf="@+id/image_work2"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/txt_abfahrt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:text="Abfahrt"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/grey_background" />

    <TextView
        android:id="@+id/txt_ankunft1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:text="Ankunft"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/txt_abfahrt1" />

    <TextView
        android:id="@+id/txt_sitze1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:text="Sitze"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/txt_ankunft1" />

    <TextView
        android:id="@+id/txt_abfahrt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:text="Abfahrt"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/grey_background2" />

    <TextView
        android:id="@+id/txt_ankunft2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:text="Ankunft"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/txt_abfahrt2" />

    <TextView
        android:id="@+id/txt_sitze2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:text="Sitze"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/txt_ankunft2" />


</android.support.constraint.ConstraintLayout>